@@ -1090,81 +1090,6 @@ class WCS_Functions_Test extends WP_UnitTestCase {
 	}
 
 	/**
-	 * Tests ordering by status
-	 */
-	public function test_4_wcs_get_subscriptions() {
-		$subscription_1 = WCS_Helper_Subscription::create_subscription(
-			array(
-				'status' => 'active',
-			)
-		);
-
-		$subscription_2 = WCS_Helper_Subscription::create_subscription(
-			array(
-				'status' => 'pending',
-			)
-		);
-
-		$subscription_3 = WCS_Helper_Subscription::create_subscription(
-			array(
-				'status' => 'on-hold',
-			)
-		);
-
-		$subscription_4 = WCS_Helper_Subscription::create_subscription(
-			array(
-				'status' => 'switched',
-			)
-		);
-
-		$subscription_5 = WCS_Helper_Subscription::create_subscription(
-			array(
-				'status' => 'expired',
-			)
-		);
-
-		$subscription_6 = WCS_Helper_Subscription::create_subscription(
-			array(
-				'status' => 'cancelled',
-			)
-		);
-
-		$subscription_7 = WCS_Helper_Subscription::create_subscription(
-			array(
-				'status' => 'active',
-			)
-		);
-
-		$subscription_8 = WCS_Helper_Subscription::create_subscription(
-			array(
-				'status' => 'pending-cancel',
-			)
-		);
-
-		$subscription_9 = WCS_Helper_Subscription::create_subscription(
-			array(
-				'status' => 'expired',
-			)
-		);
-
-		$subscriptions = wcs_get_subscriptions( array( 'orderby' => 'status' ) );
-		$this->assertIsArray( $subscriptions );
-		$this->assertEquals( 9, count( $subscriptions ) );
-		$correct_order = array(
-			$subscription_1->get_id() => $subscription_1,
-			$subscription_7->get_id() => $subscription_7,
-			$subscription_6->get_id() => $subscription_6,
-			$subscription_5->get_id() => $subscription_5,
-			$subscription_9->get_id() => $subscription_9,
-			$subscription_3->get_id() => $subscription_3,
-			$subscription_2->get_id() => $subscription_2,
-			$subscription_8->get_id() => $subscription_8,
-			$subscription_4->get_id() => $subscription_4,
-		);
-		$this->assertEquals( $subscriptions, $correct_order );
-	}
-
-	/**
 	 * Tests ordering by start_date
 	 */
 	public function test_5_wcs_get_subscriptions() {
