@@ -1,6 +1,8 @@
 *** WooCommerce Subscriptions Core Changelog ***
 
 = 5.0.0 - 2022-xx-xx =
+* Add - New wcs_get_orders_with_meta_query() helper function to query for orders and subscriptions.
+* Update - Replace instances of `get_posts()` across codebase with new wcs_get_orders_with_meta_query() function.
 * Dev - Code that was tagged with a version and moved from WooCommerce Subscriptions now explicitly mentions this and shows the correct subscriptions-core and WC Subscriptions versions.
 
 = 2.5.1 - 2022-11-04 =
